<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity"
    android:background="?attr/colorPrimary">

    <ImageView
        android:id="@+id/avatar_detail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/img_bg"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/username_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cPurple"
        android:textSize="12sp"
        android:background="@drawable/rounded_textview"
        android:fontFamily="@font/jetbrainsmonoregular"
        android:paddingHorizontal="6dp"
        android:paddingVertical="3dp"
        app:layout_constraintBaseline_toBottomOf="@id/avatar_detail"
        app:layout_constraintStart_toStartOf="@id/avatar_detail"
        app:layout_constraintEnd_toEndOf="@id/avatar_detail"
        tools:text="\@ridianputra" />

    <TextView
        android:id="@+id/name_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/jetbrainsmonoregular"
        android:ellipsize="end"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar_detail"
        app:layout_constraintTop_toTopOf="@id/avatar_detail"
        tools:text="Ridian Putra" />

    <TextView
        android:id="@+id/location_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:fontFamily="@font/jetbrainsmonoregular"
        android:ellipsize="end"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:drawablePadding="2dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/name_detail"
        app:layout_constraintStart_toStartOf="@id/name_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
        tools:text="New Delhi, India" />

    <TextView
        android:id="@+id/company_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:fontFamily="@font/jetbrainsmonoregular"
        android:ellipsize="end"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:drawablePadding="2dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/location_detail"
        app:layout_constraintStart_toStartOf="@id/location_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:drawableStartCompat="@drawable/ic_baseline_work_24"
        tools:text="Google" />

    <TextView
        android:id="@+id/repository_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/cPink"
        android:background="@drawable/topleft_rounded"
        android:fontFamily="@font/jetbrainsmonoregular"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/username_detail"
        app:layout_constraintStart_toStartOf="@+id/repository_detail"
        app:layout_constraintEnd_toEndOf="@+id/repository_detail"
        tools:text="1096" />

    <TextView
        android:id="@+id/followers_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/cPink"
        android:background="?colorSecondaryVariant"
        android:fontFamily="@font/jetbrainsmonoregular"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/repository_value"
        app:layout_constraintStart_toStartOf="@id/followers_detail"
        app:layout_constraintEnd_toEndOf="@+id/followers_detail"
        tools:text="56000" />

    <TextView
        android:id="@+id/following_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/cPink"
        android:background="@drawable/topright_rounded"
        android:fontFamily="@font/jetbrainsmonoregular"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/followers_value"
        app:layout_constraintStart_toStartOf="@id/following_detail"
        app:layout_constraintEnd_toEndOf="@id/following_detail"
        tools:text="63" />

    <TextView
        android:id="@+id/repository_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/repository"
        android:textColor="?colorOnSecondary"
        android:background="?colorSecondaryVariant"
        android:fontFamily="@font/jetbrainsmonoregular"
        android:gravity="center"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/repository_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/followers_detail" />

    <TextView
        android:id="@+id/followers_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textColor="?colorOnSecondary"
        android:background="?colorSecondaryVariant"
        android:fontFamily="@font/jetbrainsmonoregular"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/repository_detail"
        app:layout_constraintStart_toEndOf="@+id/repository_detail"
        app:layout_constraintEnd_toStartOf="@+id/following_detail" />

    <TextView
        android:id="@+id/following_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textColor="?colorOnSecondary"
        android:background="?colorSecondaryVariant"
        android:fontFamily="@font/jetbrainsmonoregular"
        android:gravity="center"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@+id/followers_detail"
        app:layout_constraintStart_toEndOf="@+id/followers_detail"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/followers_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_24"
        android:contentDescription="@string/favorite"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:fabSize="normal"
        app:tint="@color/white"
        app:backgroundTint="@color/cPink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>